--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="<GOOGLE API KEY>" />
+
         <activity android:name=".forecast.ForecastActivity" />
         <activity android:name=".DrawerActivity">
             <intent-filter>
