--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppTheme">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -22,7 +22,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DrawerActivity" />
         </activity>
-        <activity android:name=".DrawerActivity">
+        <activity android:name=".DrawerActivity"
+            android:theme="@style/Base.AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
