--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
@@ -21,20 +22,41 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"<API_KEY>"'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    //Rx Utils
+    compile "io.reactivex:rxjava:1.1.7"
+    compile "io.reactivex:rxandroid:1.2.1"
+    compile "com.jakewharton.rxbinding:rxbinding:0.4.0"
+    compile "com.jakewharton.rxbinding:rxbinding-support-v4:0.4.0"
+    compile "com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0"
+    compile "com.jakewharton.rxbinding:rxbinding-design:0.4.0"
+    compile 'com.twistedequations.rx:rx-savestate:1.0.0'
+    compile 'com.twistedequations.rx:rx-android-schedulers:1.1.0'
+
+    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.jakewharton:butterknife:8.1.0'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+
+    //RetroFit2
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.squareup:otto:1.3.8'
