--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 23
@@ -25,6 +26,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    sourceSets {
+        test.java.srcDirs += 'src/test/kotlin'
+        test.java.srcDirs += 'src/androidTest/kotlin'
     }
 }
 
@@ -64,6 +69,15 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.squareup:otto:1.3.8'
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
+
+    //Tests with kotlin
+    testCompile 'org.jetbrains.spek:spek-api:1.0.89'
+    testCompile 'org.jetbrains.spek:spek-junit-platform-engine:1.0.89'
+    testCompile 'com.google.truth:truth:0.30'
+    testCompile 'org.junit.platform:junit-platform-runner:1.0.0-M2'
+    testCompile 'org.mockito:mockito-core:1.9.5'
 
     testCompile "org.powermock:powermock-module-junit4:1.6.4"
     testCompile "org.powermock:powermock-module-junit4-rule:1.6.4"
